doc/src/content/docs/en/0.3.x/api/link/ethercrab.mdx
---
title: EtherCrab
description: Standard Link using EtherCrab, an EtherCAT master written in Rust
sidebar:
  order: 2
slug: en/0.3.x/api/link/ethercrab
---

import CodeTabs from "@components/CodeTabs.astro";
import Install from "@components/Install.astro";

`EtherCrabLink` is a Link implementation using [EtherCrab](https://github.com/ethercrab-rs/ethercrab), an EtherCAT master written in Rust.

<Install rust="autd3-rs-link-ethercrab" python="autd3-link-ethercrab" csharp="AUTD3.Link.Ethercrab" />

Because it handles an Ethernet raw socket, running it on Linux/macOS requires root privileges (or `CAP_NET_RAW`).
On Windows, [npcap](https://nmap.org/npcap/) must be installed in "WinPcap API-compatible mode".

## API

<CodeTabs rust={"EtherCrabLinkOption {\n    iface,\n    sync0_period,\n    sync0_shift,\n    sync_tolerance,\n    sync_timeout,\n};"} python={"ethercrab.EtherCrabLinkOption(\n    iface,\n    sync0_period,\n    sync0_shift,\n    sync_tolerance,\n    sync_timeout,\n)"} csharp={"new EtherCrabLinkOption(\n    iface,\n    sync0Period,\n    sync0Shift,\n    syncTolerance,\n    syncTimeout\n);"} />

| Field            | Type       | Description                                                                      |
| ---------------- | ---------- | ------------------------------------------------------------------------------- |
| `iface`          | `Interface` | network interface to use. `Interface::Auto` for automatic selection, `Interface::Name(..)` to specify by name |
| `sync0_period`   | `Duration` | period of the SYNC0 signal                                                      |
| `sync0_shift`    | `Duration` | shift amount of the SYNC0 signal                                                |
| `sync_tolerance` | `Duration` | tolerance considered as synchronization complete                                |
| `sync_timeout`   | `Duration` | timeout to wait for synchronization to complete                                 |

`EtherCrabLinkOptionFull`, which fully configures EtherCrab, is also provided (Rust only).

<CodeTabs rust={"EtherCrabLinkOptionFull {\n    iface,\n    timeouts,\n    main_device_config,\n    dc_configuration,\n    sync_tolerance,\n    sync_timeout,\n};"} />

| Field                 | Type                                                                                                     | Description                                                                      |
| --------------------- | -------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- |
| `iface`               | `Interface`                                                                                              | network interface to use. `Interface::Auto` for automatic selection, `Interface::Name(..)` to specify by name |
| `timeouts`            | [`ethercrab::Timeouts`](https://docs.rs/ethercrab/0.7.1/ethercrab/struct.Timeouts.html)                  | see the EtherCrab documentation                                                 |
| `main_device_config`  | [`ethercrab::MainDeviceConfig`](https://docs.rs/ethercrab/0.7.1/ethercrab/struct.MainDeviceConfig.html)  | see the EtherCrab documentation                                                 |
| `dc_configuration`    | [`ethercrab::subdevice_group::DcConfiguration`](https://docs.rs/ethercrab/0.7.1/ethercrab/subdevice_group/struct.DcConfiguration.html) | see the EtherCrab documentation                                  |
| `sync_tolerance`      | `Duration`                                                                                               | tolerance considered as synchronization complete                                |
| `sync_timeout`        | `Duration`                                                                                               | timeout to wait for synchronization to complete                                 |
